--- a/events.html
+++ b/events.html
@@ -5,47 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retro Threads Events</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="gallery.html">Photo Gallery</a></li>
-            <li><a href="store.html">Store</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Brand</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Photo Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="store.html">Store</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="events.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <div class="container">
-        <h1>Retro Threads Events</h1>
-        
-        <div class="event-item">
-            <img src="./images/NewYork.avif" alt="New York Event">
-            <h2>Special Retro Threads Event in New York</h2>
-            <p>Date: 3 months from now</p>
-            <p>Location: New York City</p>
-            <p>Join us for an exclusive event showcasing the latest retro fashion trends. Get ready for a night of style, music, and unforgettable moments!</p>
-            <p>Stay tuned for more details and surprises. Don't miss out on this fashion extravaganza!</p>
-        </div>
+    <div class="container mt-4">
+        <h1 class="display-4">Retro Threads Events</h1>
 
-        <div class="event-item">
-            <img src="./images/Paris.jpg" alt="Paris Event">
-            <h2>Grand Retro Threads Fashion Event in Paris</h2>
-            <p>Date: 6 months from now</p>
-            <p>Location: Paris, France</p>
-            <p>Experience the essence of retro fashion in the city of love. Our Paris event promises an enchanting evening filled with elegance and vintage style.</p>
-            <p>Prepare for an extraordinary showcase of unique clothing pieces and a celebration of timeless fashion. Save the date for an unforgettable experience!</p>
-        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <img src="./images/NewYork.avif" class="card-img-top" alt="New York Event">
+                    <div class="card-body">
+                        <h2 class="card-title">Special Retro Threads Event in New York</h2>
+                        <p class="card-text">Date: 3 months from now</p>
+                        <p class="card-text">Location: New York City</p>
+                        <p class="card-text">Join us for an exclusive event showcasing the latest retro fashion trends. Get ready for a night of style, music, and unforgettable moments!</p>
+                        <p class="card-text">Stay tuned for more details and surprises. Don't miss out on this fashion extravaganza!</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <img src="./images/Paris.jpg" class="card-img-top" alt="Paris Event">
+                    <div class="card-body">
+                        <h2 class="card-title">Grand Retro Threads Fashion Event in Paris</h2>
+                        <p class="card-text">Date: 6 months from now</p>
+                        <p class="card-text">Location: Paris, France</p>
+                        <p class="card-text">Experience the essence of retro fashion in the city of love. Our Paris event promises an enchanting evening filled with elegance and vintage style.</p>
+                        <p class="card-text">Prepare for an extraordinary showcase of unique clothing pieces and a celebration of timeless fashion. Save the date for an unforgettable experience!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
