--- a/gallery.html
+++ b/gallery.html
@@ -5,47 +5,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retro Threads Gallery</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="gallery.html">Photo Gallery</a></li>
-            <li><a href="store.html">Store</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Brand</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="gallery.html">Photo Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="store.html">Store</a></li>
+                    <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <div class="container">
-        <h1>Retro Threads Gallery</h1>
+    <div class="container mt-4">
+        <h1 class="display-4">Retro Threads Gallery</h1>
         
-        <div class="gallery-item">
-            <img src="./images/RetroGirl.jpg" alt="Image 1">
-            <h2>Retro Girl</h2>
-        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="gallery-item">
+                    <img src="./images/RetroGirl.jpg" alt="Retro Girl">
+                    <h2>Retro Girl</h2>
+                </div>
+            </div>
 
-        <div class="gallery-item">
-            <img src="./images/tommy.jpg"" alt="Image 2">
-            <h2>Retro Girl</h2>
-        </div>
+            <div class="col-md-6">
+                <div class="gallery-item">
+                    <img src="./images/tommy.jpg" alt="Tommy">
+                    <h2>Tommy</h2>
+                </div>
+            </div>
 
-        <div class="gallery-item">
-            <img src="./images/retroCrew.jpg" alt="Image 2">
-            <h2>Retro Crew</h2>
-        </div>
+            <div class="col-md-6">
+                <div class="gallery-item">
+                    <img src="./images/retroCrew.jpg" alt="Retro Crew">
+                    <h2>Retro Crew</h2>
+                </div>
+            </div>
 
-        <div class="gallery-item">
-            <img src="./images/RetroStore.jpg" alt="Image 2">
-            <h2>Gallery Spot</h2>
+            <div class="col-md-6">
+                <div class="gallery-item">
+                    <img src="./images/RetroStore.jpg" alt="Gallery Spot">
+                    <h2>Gallery Spot</h2>
+                </div>
+            </div>
         </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
