--- a/news.html
+++ b/news.html
@@ -5,44 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retro Threads News</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="gallery.html">Photo Gallery</a></li>
-            <li><a href="store.html">Store</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Brand</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Photo Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="store.html">Store</a></li>
+                    <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-    <div class="container">
-        <h1>Retro Threads News</h1>
-        
-        <div class="news-item">
-            <h2>Exciting Launch: New Vintage Clothing Line Coming in April!</h2>
-            <p>Get ready for a style revolution as Retro Threads unveils its latest collection of vintage clothing in April. This carefully curated line combines nostalgia with modern trends, bringing you unique and timeless fashion pieces that redefine retro elegance. Stay tuned for exclusive previews and early access details!</p>
+    <div class="container mt-4">
+        <h1 class="display-4">Retro Threads News</h1>
+
+        <div class="card news-item mb-4">
+            <div class="card-body">
+                <h2 class="card-title">Exciting Launch: New Vintage Clothing Line Coming in April!</h2>
+                <p class="card-text">Get ready for a style revolution as Retro Threads unveils its latest collection of vintage clothing in April. This carefully curated line combines nostalgia with modern trends, bringing you unique and timeless fashion pieces that redefine retro elegance. Stay tuned for exclusive previews and early access details!</p>
+            </div>
         </div>
 
-        <div class="news-item">
-            <h2>Major Collaboration: Retro Threads x Supreme Partnership</h2>
-            <p>We are thrilled to announce our collaboration with the iconic brand Supreme. This partnership merges the best of streetwear and vintage fashion, creating a collection that transcends boundaries. Expect limited edition pieces, bold designs, and a fusion of two influential fashion worlds. Don't miss out on this historic fashion moment!</p>
+        <div class="card news-item mb-4">
+            <div class="card-body">
+                <h2 class="card-title">Major Collaboration: Retro Threads x Supreme Partnership</h2>
+                <p class="card-text">We are thrilled to announce our collaboration with the iconic brand Supreme. This partnership merges the best of streetwear and vintage fashion, creating a collection that transcends boundaries. Expect limited edition pieces, bold designs, and a fusion of two influential fashion worlds. Don't miss out on this historic fashion moment!</p>
+            </div>
         </div>
 
-        <div class="news-item">
-            <h2>From Employee to Entrepreneur: The Founder's Journey</h2>
-            <p>Embark on a captivating journey with Retro Threads as our founder shares the story of humble beginnings in a small New York store. The upcoming book delves into the challenges, triumphs, and inspirations behind building a brand that celebrates the spirit of retro fashion. Stay tuned for a revealing narrative that explores the evolution of a small store into a fashion empire!</p>
+        <div class="card news-item mb-4">
+            <div class="card-body">
+                <h2 class="card-title">From Employee to Entrepreneur: The Founder's Journey</h2>
+                <p class="card-text">Embark on a captivating journey with Retro Threads as our founder shares the story of humble beginnings in a small New York store. The upcoming book delves into the challenges, triumphs, and inspirations behind building a brand that celebrates the spirit of retro fashion. Stay tuned for a revealing narrative that explores the evolution of a small store into a fashion empire!</p>
+            </div>
         </div>
-
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
